# nomad-schema-plugin-run

./: 404.html  index.html  pyproject.toml
.github/workflows/: actions.yaml  mkdocs-deploy.yml
explanation/: explanation.html
how_to/: contribute_to_the_documentation.html  contribute_to_this_plugin.html  install_this_plugin.html  use_this_plugin.html
reference/: references.html
runschema/: __init__.py  calculation.py  method.py  run.py  system.py
search/: search_index.json
tests/: test_runschema.py
tutorial/: tutorial.html
