[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "runschema"
version = "1.0"
description = "Run schema plugin for NOMAD."
readme = "README.md"
authors = [{ name = "The NOMAD Authors" }]
license = { text = "Apache-2.0" }
dependencies = [
    "nomad-lab>=1.2.0"
]

[project.urls]
homepage = "https://github.com/nomad-coe/nomad-schema-plugin-run.git"

[project.optional-dependencies]
dev = [
    "mypy==1.0.1",
    "pytest==3.10.0",
    "pytest-timeout==1.4.2",
    "pytest-cov==2.7.1",
    "ruff==0.1.4"
]
[tool.ruff]
include = ["runschema/*.py", "tests/*.py"]

# Same as Black.
line-length = 88
indent-width = 4

# Assume Python 3.9
target-version = "py39"

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # isort
    "I",
    # pylint
    "PL",
]
ignore = [
    "F403",    # 'from module import *' used; unable to detect undefined names
    "F401",    # unused import
    "PLR2004", # Magic values used in comparison
]
fixable = ["ALL"]

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# this is entirely optional, you can remove this if you wish to
[tool.ruff.format]
# use single quotes for strings.
quote-style = "single"

# indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.setuptools.packages.find]
include = ["runschema*"]

[tool.setuptools.package-data]
runschema = ["*/nomad_plugin.yaml"]
